@@ -1,0 +1,6 @@
+	.globl _start
+_start:
+	bl near
+	bl far
+	bl near
+	bl far
